@@ -1,6 +1,11 @@
 package br.com.alura.AluraFake.task;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+
+import br.com.alura.AluraFake.task.controller.TaskController;
+import br.com.alura.AluraFake.task.service.TaskService;
+import br.com.alura.AluraFake.task.dto.*;
+
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -9,7 +14,7 @@ import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -31,11 +36,7 @@ class TaskControllerTest {
     void createOpenTextTask__should_return_created_when_valid() throws Exception {
         when(taskService.createOpenTextTask(any())).thenReturn(ResponseEntity.status(201).build());
 
-        NewOpenTextTaskDTO dto = new NewOpenTextTaskDTO() {
-            public Long getCourseId() { return 1L; }
-            public String getStatement() { return "Test statement"; }
-            public Integer getOrder() { return 1; }
-        };
+        NewOpenTextTaskRequest dto = new NewOpenTextTaskRequest(1L, "Test statement", 1);
 
         mockMvc.perform(post("/task/new/opentext")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -47,7 +48,7 @@ class TaskControllerTest {
     void createSingleChoiceTask__should_return_created_when_valid() throws Exception {
         when(taskService.createSingleChoiceTask(any())).thenReturn(ResponseEntity.status(201).build());
 
-        NewSingleChoiceTaskDTO dto = createValidSingleChoiceDTO();
+        NewSingleChoiceTaskRequest dto = createValidSingleChoiceDTO();
 
         mockMvc.perform(post("/task/new/singlechoice")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -59,7 +60,7 @@ class TaskControllerTest {
     void createMultipleChoiceTask__should_return_created_when_valid() throws Exception {
         when(taskService.createMultipleChoiceTask(any())).thenReturn(ResponseEntity.status(201).build());
 
-        NewMultipleChoiceTaskDTO dto = createValidMultipleChoiceDTO();
+        NewMultipleChoiceTaskRequest dto = createValidMultipleChoiceDTO();
 
         mockMvc.perform(post("/task/new/multiplechoice")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -71,11 +72,7 @@ class TaskControllerTest {
     void createOpenTextTask__should_return_bad_request_when_invalid() throws Exception {
         when(taskService.createOpenTextTask(any())).thenReturn(ResponseEntity.badRequest().build());
 
-        NewOpenTextTaskDTO dto = new NewOpenTextTaskDTO() {
-            public Long getCourseId() { return 999L; }
-            public String getStatement() { return "Test statement"; }
-            public Integer getOrder() { return 1; }
-        };
+        NewOpenTextTaskRequest dto = new NewOpenTextTaskRequest(999L, "Test statement", 1);
 
         mockMvc.perform(post("/task/new/opentext")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -83,45 +80,18 @@ class TaskControllerTest {
                 .andExpect(status().isBadRequest());
     }
 
-    private NewSingleChoiceTaskDTO createValidSingleChoiceDTO() {
-        return new NewSingleChoiceTaskDTO() {
-            public Long getCourseId() { return 1L; }
-            public String getStatement() { return "Test statement"; }
-            public Integer getOrder() { return 1; }
-            public java.util.List<TaskOptionDTO> getOptions() {
-                TaskOptionDTO option1 = new TaskOptionDTO() {
-                    public String getOption() { return "Java"; }
-                    public Boolean getIsCorrect() { return true; }
-                };
-                TaskOptionDTO option2 = new TaskOptionDTO() {
-                    public String getOption() { return "Python"; }
-                    public Boolean getIsCorrect() { return false; }
-                };
-                return Arrays.asList(option1, option2);
-            }
-        };
+    private NewSingleChoiceTaskRequest createValidSingleChoiceDTO() {
+        TaskOptionRequest option1 = new TaskOptionRequest("Java", true);
+        TaskOptionRequest option2 = new TaskOptionRequest("Python", false);
+        
+        return new NewSingleChoiceTaskRequest(1L, "Test statement", 1, List.of(option1, option2));
     }
 
-    private NewMultipleChoiceTaskDTO createValidMultipleChoiceDTO() {
-        return new NewMultipleChoiceTaskDTO() {
-            public Long getCourseId() { return 1L; }
-            public String getStatement() { return "Test statement"; }
-            public Integer getOrder() { return 1; }
-            public java.util.List<TaskOptionDTO> getOptions() {
-                TaskOptionDTO option1 = new TaskOptionDTO() {
-                    public String getOption() { return "Java"; }
-                    public Boolean getIsCorrect() { return true; }
-                };
-                TaskOptionDTO option2 = new TaskOptionDTO() {
-                    public String getOption() { return "Spring"; }
-                    public Boolean getIsCorrect() { return true; }
-                };
-                TaskOptionDTO option3 = new TaskOptionDTO() {
-                    public String getOption() { return "Ruby"; }
-                    public Boolean getIsCorrect() { return false; }
-                };
-                return Arrays.asList(option1, option2, option3);
-            }
-        };
+    private NewMultipleChoiceTaskRequest createValidMultipleChoiceDTO() {
+        TaskOptionRequest option1 = new TaskOptionRequest("Java", true);
+        TaskOptionRequest option2 = new TaskOptionRequest("Spring", true);
+        TaskOptionRequest option3 = new TaskOptionRequest("Ruby", false);
+        
+        return new NewMultipleChoiceTaskRequest(1L, "Test statement", 1, List.of(option1, option2, option3));
     }
 }
